Change project name from starter to myIs

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <script src="js/controller/headline.ctrl.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="myIs">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
