--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,12 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/controller/headline.ctrl.js"></script>
+    <script src="js/controller/headlines.ctrl.js"></script>
+    <script src="js/controller/single-headline.ctrl.js"></script>
   </head>
 
   <body ng-app="myIs">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
+
